@@ -228,6 +228,10 @@ Mute/unmute channels 1 to 10\&.
 Unmute all channels\&.
 .IP "\fBh\fP, \fB?\fP" 
 Display available commands\&.
+.IP "\fBX\fP" 
+Display current mixer type\&.
+.IP "\fBx\fP" 
+Enable classic mixers (if available)\&.
 .IP "\fBZ\fP" 
 Display current sequence\&.
 .IP "\fBz\fP" 
