@@ -5,6 +5,8 @@ Stable versions
 	- Requires libxmp 4.4
 	- Add option to force tracker emulation
 	- Add option to enable classic sound mixers
+	- Add command to switch between standard and classic mixers
+	- Add command to display current mixer type
 	- Fix default amplification factor
 	- Fix module-specific configuration file options
 	- Remove option --offset-bug-emulation
